# licenta1

./: .gitignore  ASSESSMENT_WORKFLOW_QUICKSTART.py  DEPLOYMENT_CHECKLIST.sh  QUICK_START.py  analyze_universal_vocab.py  check_new_files.py  check_new_pdfs.py  extract_3_new_pdfs.py  extract_new_pdfs.py  extract_pdf_text.py  extract_pdf_text_v2.py  test_api.py
backend/: .gitignore  ASSESSMENT_API_GUIDE.md  ROMANIAN_PHONOLOGY_INTEGRATION.md  database.py  feedback_templates.py  generate_phoneme_heatmap.py  load_benchmarks.py  module_recommendation_algorithm.py  pilot_study_manager.py  pyproject.toml  test_accent_patterns.py  test_assessment_workflow.py  test_comprehensive_domain.py  test_domain_assessment.py  test_e2e.py  test_indicators.py  test_phonetic.py  test_research_modules.py  verify_endpoints.py
backend/app/: main.py  schemas.py
backend/app/data/: academic_vocabulary.json  speaking_tasks.json  vocabulary_enriched.json
backend/app/models/: cefr_ordinal_model.pkl  cefr_rf_model.pkl
backend/app/routes/: accent.py  adaptive.py  assessment.py  auth.py  cefr_predict.py  conversation.py  health.py  practice.py  research_assessment.py  shadow.py  srs.py  vocabulary.py
backend/app/services/: Romanian_Phone_Patterns.py  accent_dna.py  assessment_indicators.py  assessment_workflow.py  auth.py  cache.py  cefr_predictor.py  cefr_word_classifier.py  coca_genre_classifier.py  coca_genre_data.json  conversation.py  evp_words.json  exam_mapper.py  exercises.py  firestore.py  learner_clustering.py  learning_curves.py  module_effectiveness.py  onboarding.py  phoneme_local.py  phoneme_remote.py  pos_error_patterns.py  prosody_remote.py  romanian_error_detector.py  shadow_speaking.py  speaking_tasks.py  srs.py  text_indicator_analyzer.py  tts.py  vocabulary_coach.py  vocabulary_management.py
frontend/: app.json  package.json  (+2 more)
(+65 files in other folders)
