[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "georgianaoniceanu",email = "georgiana939@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.120.0,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "eng-to-ipa (>=0.0.2)",
    "g2p-en (>=0.0.15)",
    "elevenlabs (>=0.2.28,<0.3.0)",
    "mord (>=0.6,<1.0)",
    # ML / model serving (CEFR ordinal + RF models, feature extraction)
    "scikit-learn (>=1.5,<2.0)",
    "numpy (>=2.0,<3.0)",
    "joblib (>=1.4,<2.0)",
    # Speech/phoneme + prosody
    "pronouncing (>=0.3.0,<0.4.0)",
    "librosa (>=0.11.0,<0.12.0)",
    # External services + auth
    "groq (>=1.1.2,<2.0.0)",
    "firebase-admin (>=7.3.0,<8.0.0)",
    "requests (>=2.32,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
